--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -7,41 +7,26 @@
 
       <form class="login100-form validate-form">
 					<span class="login100-form-title">
-						Member Login
+						Forgot Password
 					</span>
 
         <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-          <input class="input100" type="text" name="email" placeholder="Email">
+          <input class="input100" id="forgotpassword" type="text" name="email" placeholder="Email">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
         </div>
 
-        <div class="wrap-input100 validate-input" data-validate = "Password is required">
-          <input class="input100" type="password" name="pass" placeholder="Password">
-          <span class="focus-input100"></span>
-          <span class="symbol-input100">
-							<i class="fa fa-lock" aria-hidden="true"></i>
-						</span>
-        </div>
-
         <div class="container-login100-form-btn">
-          <button class="login100-form-btn">
-            Login
+          <button (click)="go()" class="login100-form-btn">
+            Continue
           </button>
         </div>
-        <div class="text-center p-t-12">
-						<span class="txt1">
-							Forgot
-						</span>
-          <a class="txt2" href="#">
-            Username / Password?
-          </a>
-        </div>
+
         <div class="text-center p-t-136">
-          <a class="txt2" href="/signup">
-            Create your Account
+          <a class="txt2" href="/login">
+            Do you have an account?
             <i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
           </a>
         </div>
