--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -35,8 +35,8 @@
 						<span class="txt1">
 							Forgot
 						</span>
-          <a class="txt2" href="#">
-            Username / Password?
+          <a class="txt2" href="/forgotpassword">
+             Password?
           </a>
         </div>
         <div class="text-center p-t-136">
