--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -5,13 +5,13 @@
         <img src="/assets/images/img-01.png" alt="IMG">
       </div>
 
-      <form class="login100-form validate-form">
+      <form class="">
 					<span class="login100-form-title">
 						Member Login
 					</span>
 
         <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-          <input class="input100" type="text" name="email" placeholder="Email">
+          <input class="input100" #email type="text"placeholder="Email">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -19,7 +19,7 @@
         </div>
 
         <div class="wrap-input100 validate-input" data-validate = "Password is required">
-          <input class="input100" type="password" name="pass" placeholder="Password">
+          <input class="input100" #password  type="password" placeholder="Password">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -27,15 +27,16 @@
         </div>
 
         <div class="container-login100-form-btn">
-          <button class="login100-form-btn">
+          <button (click)="onLogin(email.value,password.value)" class="login100-form-btn">
             Login
           </button>
         </div>
+
         <div class="text-center p-t-12">
 						<span class="txt1">
 							Forgot
 						</span>
-          <a class="txt2" href="/forgotpassword">
+          <a class="txt2"  href="/forgotpassword">
              Password?
           </a>
         </div>
