--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -12,7 +12,7 @@
 					</span>
 
         <div class="wrap-input100 validate-input" data-validate = "Name is required">
-          <input class="input100" type="text" name="name" placeholder="Name">
+          <input class="input100" type="text" #name placeholder="Name">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
@@ -20,7 +20,7 @@
         </div>
 
         <div class="wrap-input100 validate-input" data-validate = "Surname is required">
-          <input class="input100" type="text" name="surname" placeholder="Surname">
+          <input class="input100" type="text" #surname placeholder="Surname">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
@@ -28,7 +28,7 @@
         </div>
 
         <div class="wrap-input100 validate-input" data-validate = "Phone Number is required">
-          <input class="input100" type="number" name="phnumber" placeholder="Phone Number">
+          <input class="input100" type="number" #number placeholder="Phone Number">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-phone" aria-hidden="true"></i>
@@ -37,7 +37,7 @@
 
 
         <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-          <input class="input100" type="text" name="email" placeholder="Email">
+          <input class="input100" type="text" #email placeholder="Email">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -45,14 +45,14 @@
         </div>
 
         <div class="wrap-input100 validate-input" data-validate = "Password is required">
-          <input class="input100" type="password" name="pass" placeholder="Password">
+          <input class="input100" type="password" #password placeholder="Password">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
         </div>
         <div class="container-login100-form-btn">
-          <button class="login100-form-btn">
+          <button (click)="onRegister(name.value,surname.value,number.value,email.value,password.value)" class="login100-form-btn">
             Register
           </button>
         </div>
