--- a/src/app/forgotpassword/forgotpassword.component.html
+++ b/src/app/forgotpassword/forgotpassword.component.html
@@ -11,7 +11,7 @@
 					</span>
 
         <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-          <input class="input100" id="forgotpassword" type="text" name="email" placeholder="Email">
+          <input class="input100" id="forgotpassword" type="text" #mail placeholder="Email">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -19,7 +19,7 @@
         </div>
 
         <div class="container-login100-form-btn">
-          <button (click)="go()" class="login100-form-btn">
+          <button (click)="mailSend(mail.value)" class="login100-form-btn">
             Continue
           </button>
         </div>
