--- a/src/app/forgotpassword/passwordcode/passwordcode.component.html
+++ b/src/app/forgotpassword/passwordcode/passwordcode.component.html
@@ -11,15 +11,31 @@
 					</span>
 
         <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-          <input class="input100" id="passwordcode" type="text" name="code" placeholder="Code">
+          <input class="input100" id="passwordcode" type="text" #code placeholder="Code">
           <span class="focus-input100"></span>
           <span class="symbol-input100">
 							<i class="fa fa-code" aria-hidden="true"></i>
 						</span>
         </div>
 
+        <div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
+          <input class="input100" id="forgotpassword" type="text" #mail placeholder="Email">
+          <span class="focus-input100"></span>
+          <span class="symbol-input100">
+							<i class="fa fa-envelope" aria-hidden="true"></i>
+						</span>
+        </div>
+
+        <div class="wrap-input100 validate-input" data-validate = "Password is required">
+          <input class="input100" #password  type="password" placeholder="Password">
+          <span class="focus-input100"></span>
+          <span class="symbol-input100">
+							<i class="fa fa-lock" aria-hidden="true"></i>
+						</span>
+        </div>
+
         <div class="container-login100-form-btn">
-          <button (click)="go()" class="login100-form-btn">
+          <button (click)="newPassword(code.value, mail.value, password.value)" class="login100-form-btn">
             Continue
           </button>
         </div>
