--- a/src/app/user-pages/login/login.component.html
+++ b/src/app/user-pages/login/login.component.html
@@ -1,4 +1,6 @@
-<div class="d-flex align-items-center auth px-0 justify-content" style="margin-top: 5%">
+
+
+<div class="d-flex align-items-center auth px-0 justify-content" style="margin-top: 3%">
   <div class="row w-100 mx-0">
     <div class="col-lg-4 mx-auto">
       <div class="auth-form-light text-left py-5 px-4 px-sm-5">
@@ -14,6 +16,7 @@
           <div class="form-group">
             <input type="password" #password class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
           </div>
+
           <div class="mt-3">
             <a class="btn btn-block btn-primary btn-lg font-weight-medium auth-form-btn" (click)="onLogin(email.value, password.value)">SIGN IN</a>
           </div>
@@ -24,8 +27,15 @@
           <div class="text-center mt-4 font-weight-light">
             Don't have an account? <a routerLink="/user-pages/register" class="text-primary">Create</a>
           </div>
+          <div id="alert" class="alert alert-fill-danger"  *ngIf="error.message">
+            <i class="mdi mdi-information-outline"></i>
+            <span id="message" >{{error.message}}</span>
+          </div>
         </form>
       </div>
     </div>
   </div>
 </div>
+
+
+
