--- a/src/app/advert/advert.component.html
+++ b/src/app/advert/advert.component.html
@@ -5,58 +5,179 @@
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="javascript:;">Advert</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Add Advert</li>
+        <li class="breadcrumb-item active" aria-current="page">Advert List</li>
       </ol>
     </nav>
   </div>
-  <div class="col-12 grid-margin stretch-card">
+ 
+<div class="col-lg-12 grid-margin stretch-card">
+    
     <div class="card">
+        
       <div class="card-body">
-        <h4 class="card-title">Add Advert</h4>
+        <button type="button" id="add-advert" routerLink="/addAdvert" class="btn btn-gradient-success btn-rounded btn-fw">Add</button>
+        <h4 class="card-title">Striped Table</h4>
         <p class="card-description">
-          Basic form elements
+          Add class <code>.table-striped</code>
         </p>
-        <form class="forms-sample">
-          <div class="form-group">
-            <label for="exampleInputName1">Name</label>
-            <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputEmail3">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
-          </div>
-          <div class="form-group">
-            <label for="exampleInputPassword4">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Password">
-          </div>
-          <div class="form-group">
-            <label for="exampleSelectGender">Gender</label>
-              <select class="form-control" id="exampleSelectGender">
-                <option>Male</option>
-                <option>Female</option>
-              </select>
-            </div>
-          <div class="form-group">
-            <label>File upload</label>
-            <input type="file" name="img[]" class="file-upload-default">
-            <div class="input-group col-xs-12">
-              <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
-              <span class="input-group-append">
-                <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
-              </span>
-            </div>
-          </div>
-          <div class="form-group">
-            <label for="exampleInputCity1">City</label>
-            <input type="text" class="form-control" id="exampleInputCity1" placeholder="Location">
-          </div>
-          <div class="form-group">
-            <label for="exampleTextarea1">Textarea</label>
-            <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
-          </div>
-          <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
-          <button class="btn btn-light">Cancel</button>
-        </form>
+        <div class="table-responsive">
+          <table class="table table-striped">
+            <thead>
+              <tr>
+                <th>
+                  User
+                </th>
+                <th>
+                  First name
+                </th>
+                <th>
+                  Progress
+                </th>
+                <th>
+                  Amount
+                </th>
+                <th>
+                  Deadline
+                </th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td class="py-1">
+                  <img src="assets/images/faces/face1.jpg" alt="image"/>
+                </td>
+                <td>
+                  Herman Beck
+                </td>
+                <td>
+                  <div class="progress">
+                    <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </td>
+                <td>
+                  $ 77.99
+                </td>
+                <td>
+                  May 15, 2015
+                </td>
+              </tr>
+              <tr>
+                <td class="py-1">
+                  <img src="assets/images/faces/face2.jpg" alt="image"/>
+                </td>
+                <td>
+                  Messsy Adam
+                </td>
+                <td>
+                  <div class="progress">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </td>
+                <td>
+                  $245.30
+                </td>
+                <td>
+                  July 1, 2015
+                </td>
+              </tr>
+              <tr>
+                <td class="py-1">
+                  <img src="assets/images/faces/face3.jpg" alt="image"/>
+                </td>
+                <td>
+                  John Richards
+                </td>
+                <td>
+                  <div class="progress">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </td>
+                <td>
+                  $138.00
+                </td>
+                <td>
+                  Apr 12, 2015
+                </td>
+              </tr>
+              <tr>
+                <td class="py-1">
+                  <img src="assets/images/faces/face4.jpg" alt="image"/>
+                </td>
+                <td>
+                  Peter Meggik
+                </td>
+                <td>
+                  <div class="progress">
+                    <div class="progress-bar bg-primary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </td>
+                <td>
+                  $ 77.99
+                </td>
+                <td>
+                  May 15, 2015
+                </td>
+              </tr>
+              <tr>
+                <td class="py-1">
+                  <img src="assets/images/faces/face5.jpg" alt="image"/>
+                </td>
+                <td>
+                  Edward
+                </td>
+                <td>
+                  <div class="progress">
+                    <div class="progress-bar bg-danger" role="progressbar" style="width: 35%" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </td>
+                <td>
+                  $ 160.25
+                </td>
+                <td>
+                  May 03, 2015
+                </td>
+              </tr>
+              <tr>
+                <td class="py-1">
+                  <img src="assets/images/faces/face6.jpg" alt="image"/>
+                </td>
+                <td>
+                  John Doe
+                </td>
+                <td>
+                  <div class="progress">
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </td>
+                <td>
+                  $ 123.21
+                </td>
+                <td>
+                  April 05, 2015
+                </td>
+              </tr>
+              <tr>
+                <td class="py-1">
+                  <img src="assets/images/faces/face7.jpg" alt="image"/>
+                </td>
+                <td>
+                  Henry Tom
+                </td>
+                <td>
+                  <div class="progress">
+                    <div class="progress-bar bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+                  </div>
+                </td>
+                <td>
+                  $ 150.00
+                </td>
+                <td>
+                  June 16, 2015
+                </td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
   </div>
