refactor: Update and Add Advert pages design

--- a/src/app/add-advert/add-advert.component.html
+++ b/src/app/add-advert/add-advert.component.html
@@ -4,7 +4,7 @@
     </h3>
     <nav aria-label="breadcrumb">
       <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a href="javascript:;">Advert</a></li>
+        <li class="breadcrumb-item"><a routerLink="/advert">Advert</a></li>
         <li class="breadcrumb-item active" aria-current="page">Add Advert</li>
       </ol>
     </nav>
@@ -13,29 +13,32 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Add Advert</h4>
-        <p class="card-description">
-          Basic form elements
-        </p>
+      
         <form class="forms-sample">
           <div class="form-group">
             <label for="exampleInputName1">Name</label>
             <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
           </div>
           <div class="form-group">
-            <label for="exampleInputEmail3">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail3" placeholder="Email">
+            <label for="exampleFormControlSelect2">Animal Select</label>
+            <select class="form-control" id="exampleFormControlSelect2">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword4">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword4" placeholder="Password">
+            <label for="exampleFormControlSelect2">Advert Type</label>
+            <select class="form-control" id="exampleFormControlSelect2">
+              <option>1</option>
+              <option>2</option>
+              <option>3</option>
+              <option>4</option>
+              <option>5</option>
+            </select>
           </div>
-          <div class="form-group">
-            <label for="exampleSelectGender">Gender</label>
-              <select class="form-control" id="exampleSelectGender">
-                <option>Male</option>
-                <option>Female</option>
-              </select>
-            </div>
           <div class="form-group">
             <label>File upload</label>
             <input type="file" name="img[]" class="file-upload-default">
@@ -47,11 +50,11 @@
             </div>
           </div>
           <div class="form-group">
-            <label for="exampleInputCity1">City</label>
-            <input type="text" class="form-control" id="exampleInputCity1" placeholder="Location">
+            <label for="exampleTextarea1">Address</label>
+            <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
           </div>
           <div class="form-group">
-            <label for="exampleTextarea1">Textarea</label>
+            <label for="exampleTextarea1">Description</label>
             <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
           </div>
           <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
