refactor: update and add advert pages design

--- a/src/app/advert/advert.component.html
+++ b/src/app/advert/advert.component.html
@@ -32,7 +32,7 @@
                   Animal Name
                 </th>
                 <th>
-                  Advert Date
+                  Advert Creation Date
                 </th>
                 
                 <th>
