--- a/src/app/add-advert/add-advert.component.html
+++ b/src/app/add-advert/add-advert.component.html
@@ -12,35 +12,35 @@
   <div class="col-12 grid-margin stretch-card">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Add Advert</h4>
+        <h4 class="card-title">New Advert</h4>
       
         <form class="forms-sample">
           <div class="form-group">
-            <label for="exampleInputName1">Name</label>
-            <input type="text" class="form-control" id="exampleInputName1" placeholder="Name">
+            <label for="exampleInputName1">Advert Title</label>
+            <input type="text" class="form-control" id="exampleInputName1">
           </div>
           <div class="form-group">
-            <label for="exampleFormControlSelect2">Animal Select</label>
+            <label for="exampleTextarea1">Advert Description</label>
+            <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlSelect2">Advert Status</label>
             <select class="form-control" id="exampleFormControlSelect2">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
+              <option>Bekliyor</option>
+              <option>Tamamlandı</option>
+              <option>Daha fazla gerekiyor</option>
             </select>
           </div>
           <div class="form-group">
             <label for="exampleFormControlSelect2">Advert Type</label>
             <select class="form-control" id="exampleFormControlSelect2">
-              <option>1</option>
-              <option>2</option>
-              <option>3</option>
-              <option>4</option>
-              <option>5</option>
+              <option>Beslenme Yardımı</option>
+              <option>Sahiplendirme</option>
+              <option>Aşılama</option>
             </select>
           </div>
           <div class="form-group">
-            <label>File upload</label>
+            <label>Animal Photo</label>
             <input type="file" name="img[]" class="file-upload-default">
             <div class="input-group col-xs-12">
               <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
@@ -50,14 +50,35 @@
             </div>
           </div>
           <div class="form-group">
+            <label for="exampleInputName1">Animal Type</label>
+            <input type="text" class="form-control" id="exampleInputName1">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputName1">Animal Age</label>
+            <input type="numeric" class="form-control" id="exampleInputName1">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputName1">Animal Gender</label>
+            <input type="text" class="form-control" id="exampleInputName1">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputName1">City</label>
+            <input type="text" class="form-control" id="exampleInputName1">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputName1">District</label>
+            <input type="numeric" class="form-control" id="exampleInputName1">
+          </div>
+          <div class="form-group">
+            <label for="exampleInputName1">Street</label>
+            <input type="text" class="form-control" id="exampleInputName1">
+          </div>
+          <div class="form-group">
             <label for="exampleTextarea1">Address</label>
             <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
           </div>
-          <div class="form-group">
-            <label for="exampleTextarea1">Description</label>
-            <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
-          </div>
-          <button type="submit" class="btn btn-gradient-primary mr-2">Submit</button>
+          
+          <button type="submit" class="btn btn-gradient-primary mr-2">Add</button>
           <button class="btn btn-light">Cancel</button>
         </form>
       </div>
