--- a/src/app/add-advert/add-advert.component.html
+++ b/src/app/add-advert/add-advert.component.html
@@ -13,8 +13,8 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">New Advert</h4>
-      
-        <form class="forms-sample">
+
+        <form class="forms-sample" enctype="multipart/form-data" >
           <div class="form-group">
             <label for="exampleInputName1">Advert Title</label>
             <input type="text" class="form-control" id="exampleInputName1">
@@ -41,11 +41,13 @@
           </div>
           <div class="form-group">
             <label>Animal Photo</label>
-            <input type="file" name="img[]" class="file-upload-default">
             <div class="input-group col-xs-12">
-              <input type="text" class="form-control file-upload-info" disabled placeholder="Upload Image">
+              <input #imageInput
+                     type="file"
+                     accept="image/*"
+                     class="form-control file-upload-info"  placeholder="Upload Image">
               <span class="input-group-append">
-                <button class="file-upload-browse btn btn-gradient-primary" type="button">Upload</button>
+                <button class="file-upload-browse btn btn-gradient-primary"  (click)="handleFileInput(imageInput)" type="button">Upload</button>
               </span>
             </div>
           </div>
@@ -77,7 +79,7 @@
             <label for="exampleTextarea1">Address</label>
             <textarea class="form-control" id="exampleTextarea1" rows="4"></textarea>
           </div>
-          
+
           <button type="submit" class="btn btn-gradient-primary mr-2">Add</button>
           <button class="btn btn-light">Cancel</button>
         </form>
