feat: added advert add api connection

--- a/src/app/add-advert/add-advert.component.html
+++ b/src/app/add-advert/add-advert.component.html
@@ -23,20 +23,13 @@
             <label for="exampleTextarea1">Advert Description</label>
             <textarea class="form-control" #desc  rows="4"></textarea>
           </div>
-          <div class="form-group">
-            <label for="exampleFormControlSelect2">Advert Status</label>
-            <select class="form-control" #status>
-              <option>Bekliyor</option>
-              <option>Tamamlandı</option>
-              <option>Daha fazla gerekiyor</option>
-            </select>
-          </div>
+         
           <div class="form-group">
             <label for="exampleFormControlSelect2">Advert Type</label>
             <select class="form-control" #adverttype id="exampleFormControlSelect2">
-              <option>Beslenme Yardımı</option>
-              <option>Sahiplendirme</option>
-              <option>Aşılama</option>
+              <option value="0">Beslenme Yardımı</option>
+              <option value="1">Sahiplendirme</option>
+              <option value="2">Aşılama</option>
             </select>
           </div>
           <div class="form-group">
@@ -61,7 +54,11 @@
           </div>
           <div class="form-group">
             <label for="exampleInputName1">Animal Gender</label>
-            <input type="text" class="form-control" #gender>
+            <select class="form-control" #gender id="exampleFormControlSelect2">
+              <option value="0">Erkek</option>
+              <option value="1">Dişi</option>
+              <option value="2">Bilinmiyor</option>
+            </select>
           </div>
           <div class="form-group">
             <label for="exampleInputName1">City</label>
