--- a/src/app/add-advert/add-advert.component.html
+++ b/src/app/add-advert/add-advert.component.html
@@ -50,7 +50,7 @@
           </div>
           <div class="form-group">
             <label for="exampleInputName1">Animal Age</label>
-            <input type="numeric" class="form-control" #age>
+            <input type="number" class="form-control" #age>
           </div>
           <div class="form-group">
             <label for="exampleInputName1">Animal Gender</label>
@@ -77,7 +77,7 @@
             <textarea class="form-control" #adress id="exampleTextarea1" rows="4"></textarea>
           </div>
 
-          <button type="submit" (click)="save(title.value,desc.value,status.value,adverttype.value,animaltype.value,age.value,gender.value,city.value,district.value,
+          <button type="submit" (click)="save(title.value,desc.value,adverttype.value,animaltype.value,age.value,gender.value,city.value,district.value,
                                               street.value,adress.value)"
                   class="btn btn-gradient-primary mr-2">Add</button>
           <button routerLink="/advert" class="btn btn-light">Cancel</button>
