fix: fix advert add bug

--- a/src/app/add-advert/add-advert.component.html
+++ b/src/app/add-advert/add-advert.component.html
@@ -23,7 +23,7 @@
             <label for="exampleTextarea1">Advert Description</label>
             <textarea class="form-control" #desc  rows="4"></textarea>
           </div>
-         
+
           <div class="form-group">
             <label for="exampleFormControlSelect2">Advert Type</label>
             <select class="form-control" #adverttype id="exampleFormControlSelect2">
@@ -55,9 +55,9 @@
           <div class="form-group">
             <label for="exampleInputName1">Animal Gender</label>
             <select class="form-control" #gender id="exampleFormControlSelect2">
-              <option value="0">Erkek</option>
-              <option value="1">Dişi</option>
-              <option value="2">Bilinmiyor</option>
+              <option>Erkek</option>
+              <option>Dişi</option>
+              <option>Bilinmiyor</option>
             </select>
           </div>
           <div class="form-group">
