feat: added dashboard advert list card design

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -15,5 +15,89 @@
   </nav>
 </div>
 
+<div class="container">
+<div class="row">    <div style="margin-top: 20px" class="col-lg-4 justify-content-center">
+  <igx-card>
+    <igx-card-media height="196px">
+      <img style="width: 100%;" src="https://images.unsplash.com/photo-1518235506717-e1ed3306a89b?ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=50">
+    </igx-card-media>
 
-Dashboard Work!
+    <igx-card-header>
+      <h3 igxCardHeaderTitle>New York</h3>
+      <h5 igxCardHeaderSubtitle>City in New York</h5>
+    </igx-card-header>
+
+    <igx-card-content>
+      <span>asas</span>
+      <hr>
+      <span>asas</span>
+      <hr>
+      <span>asas</span>
+      <hr>
+      <span>asas</span>
+      <hr>
+    </igx-card-content>
+
+    <igx-card-actions>
+      <span class="badge-pill badge-danger"> Bekleniyor</span>
+    </igx-card-actions>
+  </igx-card>
+</div>
+  <div style="margin-top: 20px" class="col-lg-4 justify-content-center">
+    <igx-card>
+      <igx-card-media height="196px">
+        <img style="width: 100%;" src="https://images.unsplash.com/photo-1518235506717-e1ed3306a89b?ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=50">
+      </igx-card-media>
+
+      <igx-card-header>
+        <h3 igxCardHeaderTitle>New York</h3>
+        <h5 igxCardHeaderSubtitle>City in New York</h5>
+      </igx-card-header>
+
+      <igx-card-content>
+        <span>asas</span>
+        <hr>
+        <span>asas</span>
+        <hr>
+        <span>asas</span>
+        <hr>
+        <span>asas</span>
+        <hr>
+      </igx-card-content>
+
+      <igx-card-actions>
+        <span class="badge-pill badge-danger"> Bekleniyor</span>
+      </igx-card-actions>
+    </igx-card>
+  </div>
+  <div style="margin-top: 20px" class="col-lg-4 justify-content-center">
+    <igx-card>
+      <igx-card-media height="196px">
+        <img style="width: 100%;" src="https://images.unsplash.com/photo-1518235506717-e1ed3306a89b?ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=50">
+      </igx-card-media>
+
+      <igx-card-header>
+        <h3 igxCardHeaderTitle>New York</h3>
+        <h5 igxCardHeaderSubtitle>City in New York</h5>
+      </igx-card-header>
+
+      <igx-card-content>
+        <span>asas</span>
+        <hr>
+        <span>asas</span>
+        <hr>
+        <span>asas</span>
+        <hr>
+        <span>asas</span>
+        <hr>
+      </igx-card-content>
+
+      <igx-card-actions>
+        <span class="badge-pill badge-danger"> Bekleniyor</span>
+      </igx-card-actions>
+    </igx-card>
+  </div>
+
+</div>
+
+</div>
