--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -16,88 +16,47 @@
 </div>
 
 <div class="container">
-<div class="row">    <div style="margin-top: 20px" class="col-lg-4 justify-content-center">
-  <igx-card>
-    <igx-card-media height="196px">
-      <img style="width: 100%;" src="https://images.unsplash.com/photo-1518235506717-e1ed3306a89b?ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=50">
-    </igx-card-media>
+  <div class="row">
+    <div style="margin-top: 20px" class="col-lg-4 justify-content-center" *ngFor="let data of model['data']">
+      <igx-card >
+        <igx-card-media height="196px">
+          <img style="width: 100%;" src="https://petner-cdn.yusufozgul.com/upload-008770818.png">
+        </igx-card-media>
 
-    <igx-card-header>
-      <h3 igxCardHeaderTitle>New York</h3>
-      <h5 igxCardHeaderSubtitle>City in New York</h5>
-    </igx-card-header>
+        <igx-card-header>
+          <h3 igxCardHeaderTitle>{{data.advertisementTitle}}</h3>
+          
+        </igx-card-header>
 
-    <igx-card-content>
-      <span>asas</span>
-      <hr>
-      <span>asas</span>
-      <hr>
-      <span>asas</span>
-      <hr>
-      <span>asas</span>
-      <hr>
-    </igx-card-content>
+        <igx-card-content>
+          <span><b>Age</b>: {{data.advertisementAnimal.age}}</span>
+          <br>
+          <br>
+          <span><b>Gender</b>: {{data.advertisementAnimal.gender}}</span>
+          <br>
+          <br>
+          <span [ngSwitch]="data.advertisementType">
+            <span *ngSwitchCase="0"><b>Advert Type</b>: deneme 1</span>
+            <span *ngSwitchCase="1"><b>Advert Type</b>: deneme 2</span>
+            <span *ngSwitchCase="2"><b>Advert Type</b>: deneme 3</span>
+          </span>
+          <br>
+          <br> 
+          <span><b>Province</b>: {{data.advertisementAddress.province}}</span>
+        </igx-card-content>
 
-    <igx-card-actions>
-      <span class="badge-pill badge-danger"> Bekleniyor</span>
-    </igx-card-actions>
-  </igx-card>
-</div>
-  <div style="margin-top: 20px" class="col-lg-4 justify-content-center">
-    <igx-card>
-      <igx-card-media height="196px">
-        <img style="width: 100%;" src="https://images.unsplash.com/photo-1518235506717-e1ed3306a89b?ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=50">
-      </igx-card-media>
+        <igx-card-actions>
+            <span style="float:right;" class="badge badge-pill badge-primary" > <b>{{data.advertisementAnimal.genre}}</b></span>
+            
+          <span [ngSwitch]="data.status">
+            <span style="float:right;" class="badge badge-pill badge-success"*ngSwitchCase="0"> deneme 1</span>
+            <span style="justify-content: right;" class="badge badge-pill badge-info" *ngSwitchCase="1"> deneme 2</span>
+            <span style="justify-content: right;" class="badge badge-pill badge-danger" *ngSwitchCase="2"> deneme 3</span>
+          </span>
+        </igx-card-actions>
+      </igx-card>
+    </div>
 
-      <igx-card-header>
-        <h3 igxCardHeaderTitle>New York</h3>
-        <h5 igxCardHeaderSubtitle>City in New York</h5>
-      </igx-card-header>
-
-      <igx-card-content>
-        <span>asas</span>
-        <hr>
-        <span>asas</span>
-        <hr>
-        <span>asas</span>
-        <hr>
-        <span>asas</span>
-        <hr>
-      </igx-card-content>
-
-      <igx-card-actions>
-        <span class="badge-pill badge-danger"> Bekleniyor</span>
-      </igx-card-actions>
-    </igx-card>
   </div>
-  <div style="margin-top: 20px" class="col-lg-4 justify-content-center">
-    <igx-card>
-      <igx-card-media height="196px">
-        <img style="width: 100%;" src="https://images.unsplash.com/photo-1518235506717-e1ed3306a89b?ixlib=rb-1.2.1&auto=format&fit=crop&w=640&q=50">
-      </igx-card-media>
-
-      <igx-card-header>
-        <h3 igxCardHeaderTitle>New York</h3>
-        <h5 igxCardHeaderSubtitle>City in New York</h5>
-      </igx-card-header>
-
-      <igx-card-content>
-        <span>asas</span>
-        <hr>
-        <span>asas</span>
-        <hr>
-        <span>asas</span>
-        <hr>
-        <span>asas</span>
-        <hr>
-      </igx-card-content>
-
-      <igx-card-actions>
-        <span class="badge-pill badge-danger"> Bekleniyor</span>
-      </igx-card-actions>
-    </igx-card>
-  </div>
-
-</div>
 
 </div>
