feat: added advert detail page

--- a/src/app/advert/advert.component.html
+++ b/src/app/advert/advert.component.html
@@ -48,8 +48,9 @@
               </tr>
             </thead>
             <tbody>
+               
               
-              <tr>
+              <tr routerLink="/detailAdvert/1">
                 <td class="py-1">
                   <img src="assets/images/faces/face7.jpg" alt="image"/>
                 </td>
@@ -78,7 +79,7 @@
                   </td>
                   
               </tr>
-              <tr>
+              <tr routerLink="/detailAdvert/1">
                 <td class="py-1">
                   <img src="assets/images/faces/face7.jpg" alt="image"/>
                 </td>
@@ -107,7 +108,7 @@
                   </td>
                   
               </tr>
-              <tr>
+              <tr routerLink="/detailAdvert/1">
                 <td class="py-1">
                   <img src="assets/images/faces/face7.jpg" alt="image"/>
                 </td>
