fix: fix dashboard list data

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -29,10 +29,7 @@
         </igx-card-header>
 
         <igx-card-content>
-          <span><b>Age</b>: {{data.advertisementAnimal.age}}</span>
-          <br>
-          <br>
-          <span><b>Gender</b>: {{data.advertisementAnimal.gender}}</span>
+          <span><b>Date</b>: {{data.date}}</span>
           <br>
           <br>
           <span [ngSwitch]="data.advertisementType">
